Temporary overflow fix
Until the actual bug is found

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -84,6 +84,7 @@ body {
 	background-color: #000;
 	font-family: 'manitoban_fbregular', sans-serif;
 	padding: 100vh 0 0 0;
+	overflow-x:hidden;
 }
 
 h1, h2, h3, h4, h5 {
